# django_tutorial

./: .gitignore  README.md  pyproject.toml  tree.txt
.github/workflows/: branch.yml
django-polls/: LICENSE  setup.cfg
django-polls/polls/: views.py
django-polls/polls/migrations/: 0001_initial.py
django-polls/polls/templates/polls/: detail.html  results.html
mysite/: .coverage  coverage_report.txt  db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/polls/: tests.py  urls.py  views.py
mysite/polls/templates/polls/: detail.html  index.html
mysite/templates/admin/: base_site.html
